--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "mach25/group_permissions_by_term_override",
-  "description": "Drupal 8 module to enable Permissions By Term module to override the grants of Group module",
+  "description": "Drupal module to enable Permissions By Term module to override the grants of Group module",
   "type": "drupal-module",
   "license": "MIT",
   "authors": [
