--- a/group_permissions_by_term_override.info.yml
+++ b/group_permissions_by_term_override.info.yml
@@ -2,7 +2,7 @@ name: 'Group Permissions By Term Override'
 type: module
 package: 'Group'
 description: 'Drupal 8 module to enable Permissions By Term module to override the grants of Group module'
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 dependencies:
   - 'drupal:group'
   - 'drupal:permissions_by_term'
